--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,26 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.perspective {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  perspective: 20rem;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.perspective-inner {
+  transform-style: preserve-3d;
+  position: relative;
+  height: 100%;
+}
+
+.perspective-left {
+  position: fixed;
+  width: 20%;
+  transform: translateY(-50%);
+  transition: 0.1s;
+  top: 50%;
+  left: 30%;
+}
+
+.perspective-right {
+  position: fixed;
+  width: 20%;
+  top: 50%;
+  right: 30%;
+  transform: translate3d(0px, 0px, -10rem) translateY(-50%);
+  transition: 0.1s;
+}
+
+.third {
+  transform: translate3d(0px, 0px, -20rem) translateY(-50%);
+}
+
+.fourth {
+  transform: translate3d(0px, 0px, -30rem) translateY(-50%);
+}
+
+.spacer {
+  height: 60vh;
 }
