--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,3 +51,33 @@
 .spacer {
   height: 60vh;
 }
+
+/* Hamburger*/
+.hamburger {
+  cursor: pointer;
+  position: relative;
+  width: 24px;
+  height: 24px;
+  transition: all 0.3s;
+}
+
+.hamburger-top,
+.hamburger-mid,
+.hamburger-bot {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 2px;
+  background: #986845;
+  transform: rotate(0);
+  transition: all 0.5s;
+}
+
+.hamburger-mid {
+  transform: translateY(8px);
+}
+
+.hamburger-bot {
+  transform: translateY(16px);
+}
